--- a/resources/public/style/style.css
+++ b/resources/public/style/style.css
@@ -10,3 +10,29 @@ body{
 h1,h2,h3{
     line-height:1.2
 }
+
+/* Base styles specific to navbar */
+#navbar ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+#navbar li {
+    display: inline; /* Display list items inline for full-size screens */
+}
+
+#navbar a {
+    /* display: block; */
+    padding: 8px;
+    background-color: #f2f2f2;
+    color: black;
+    text-decoration: none;
+}
+
+/* Responsive styles specific to navbar */
+@media (max-width: 600px) {
+    #navbar li {
+        display: block; /* Stack list items vertically on small screens */
+    }
+}
