--- a/resources/public/style/style.css
+++ b/resources/public/style/style.css
@@ -1,6 +1,5 @@
 body{
-    margin:40px auto;
-    max-width:650px;
+    margin:0 auto;
     line-height:1.6;
     font-size:18px;
     color:#444;
@@ -11,7 +10,21 @@ h1,h2,h3{
     line-height:1.2
 }
 
-/* Base styles specific to navbar */
+.width {
+    max-width:650px;
+    margin: 0 auto;
+}
+
+#navbar {
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: 8px;
+    background-color: #f2f2f2;
+    color: black;
+    text-decoration: none;
+}
+
 #navbar ul {
     list-style-type: none;
     margin: 0;
@@ -22,17 +35,25 @@ h1,h2,h3{
     display: inline; /* Display list items inline for full-size screens */
 }
 
-#navbar a {
-    /* display: block; */
-    padding: 8px;
-    background-color: #f2f2f2;
-    color: black;
-    text-decoration: none;
-}
-
 /* Responsive styles specific to navbar */
 @media (max-width: 600px) {
     #navbar li {
         display: block; /* Stack list items vertically on small screens */
     }
+}
+
+#navbar a {
+    text-decoration: none;
+    color: black;
+    padding: 10px 15px;
+}
+
+#navbar a:hover {
+    background-color: #dcdcdc;
+}
+
+.hero-header {
+    width: 100%;
+    background-color: #f2f2f2;
+    padding: 0;
 }
