--- a/resources/public/style/style.css
+++ b/resources/public/style/style.css
@@ -3,7 +3,7 @@ body{
     line-height:1.6;
     font-size:18px;
     color:#444;
-    padding:0 10px
+    padding:0;
 }
 
 h1,h2,h3{
@@ -20,7 +20,6 @@ h1,h2,h3{
     left: 0;
     right: 0;
     padding: 8px;
-    background-color: #f2f2f2;
     color: black;
     text-decoration: none;
 }
@@ -49,11 +48,20 @@ h1,h2,h3{
 }
 
 #navbar a:hover {
-    background-color: #dcdcdc;
+    background-color: #cbcbcb;
 }
 
 .hero-header {
     width: 100%;
     background-color: #f2f2f2;
     padding: 0;
+    padding: 1px;
+}
+
+#topbar {
+    background-color: #d9d9d9;
+}
+
+#actionbar {
+    background-color: #e8e8e8;
 }
