--- a/resources/public/style/style.css
+++ b/resources/public/style/style.css
@@ -55,7 +55,6 @@ h1,h2,h3{
     width: 100%;
     background-color: #f2f2f2;
     padding: 0;
-    padding: 1px;
 }
 
 #topbar {
@@ -64,4 +63,5 @@ h1,h2,h3{
 
 #actionbar {
     background-color: #e8e8e8;
+    padding: 1px 10px;
 }
